--- a/DockerFile
+++ b/DockerFile
@@ -1,12 +1,14 @@
 FROM node:18-slim
 
-RUN apt-get update && apt-get install -y ffmpeg
+# Install ffmpeg
+RUN apt-get update && apt-get install -y ffmpeg && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
-COPY package.json .
+COPY package.json ./
 RUN npm install
 
 COPY . .
 
+EXPOSE 3000
 CMD ["node", "index.js"]
