--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for socca-video-worker on 2025-12-12T23:47:41Z
+# fly.toml app configuration file generated for socca-video-worker on 2025-12-13T02:51:53+02:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
