--- a/DockerFile
+++ b/DockerFile
@@ -1,40 +1,12 @@
-# syntax = docker/dockerfile:1
+FROM python:3.11-slim
 
-ARG NODE_VERSION=22.21.1
-FROM node:${NODE_VERSION}-slim AS base
-
-LABEL fly_launch_runtime="Node.js"
+RUN apt-get update && apt-get install -y ffmpeg && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
-ENV NODE_ENV="production"
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
+COPY main.py .
 
-# ---------- Build stage ----------
-FROM base AS build
-
-RUN apt-get update -qq && \
-    apt-get install --no-install-recommends -y \
-      build-essential \
-      node-gyp \
-      pkg-config \
-      python-is-python3
-
-COPY package.json ./
-RUN npm install
-
-COPY . .
-
-
-# ---------- Final runtime stage ----------
-FROM base
-
-# 🔥 INSTALL FFMPEG HERE (THIS IS WHAT WAS MISSING)
-RUN apt-get update && \
-    apt-get install -y ffmpeg && \
-    rm -rf /var/lib/apt/lists/*
-
-# Copy built app
-COPY --from=build /app /app
-
-EXPOSE 3000
-CMD [ "npm", "run", "start" ]
+EXPOSE 8000
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
